[gd_scene load_steps=2 format=3 uid="uid://cngpp7rf82qne"]

[ext_resource type="Script" path="res://scene/level/ui/unit_info_inspector/action_info_entry/action_info_entry.gd" id="1_n3jbg"]

[node name="ActionInfoEntry" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
script = ExtResource("1_n3jbg")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="ValidGridTexture" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
expand_mode = 3

[node name="Labels" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionName" type="Label" parent="Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="ActionDes" type="Label" parent="Labels"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 3
